--- a/src/scss/elements/_product.scss
+++ b/src/scss/elements/_product.scss
@@ -64,6 +64,7 @@
         justify-content: center;
         width: 100%;
         padding: 10px 0;
+        gap: 10px;
         background-color: #fff;
         transition: all 0.5s cubic-bezier(0.7, 0, 0.3, 1) 0s;
 
