--- a/src/scss/themes/technology/_header.scss
+++ b/src/scss/themes/technology/_header.scss
@@ -117,7 +117,7 @@
 
         &.header--sticky {
             .navigation--mobile {
-                background-color: #ffffff;
+                background-color: #b8a2a2;
             }
         }
     }
