--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -404,7 +404,7 @@
     z-index: 9999;
     text-align: center;
     border-bottom: 0 none;
-    background-color: $color-1st;
+    // background-color: $color-1st;
     transition: all 0.4s $ease-in-out-quad;
     @include clearfix();
 
