--- a/src/scss/themes/organic/_slider.scss
+++ b/src/scss/themes/organic/_slider.scss
@@ -20,10 +20,23 @@
         }
     }
 
+    // .ps-btn {
+    //     margin-top: 20px;
+    //     padding: 12px 24px;
+    //     display: flex;
+    //     align-items: center;
+    //     width: 150px;
+    //     justify-content: center;
+    // }
+
     .ps-btn {
-        margin-top: 20px;
-        padding: 12px 24px;
-    }
+  margin: 20px auto 0; /* auto left-right = center */
+  padding: 12px 24px;
+  display: flex;
+  align-items: center;
+  width: 150px;
+  justify-content: center;
+}
 
     .ps-banner__content {
         max-width: 1200px;
@@ -56,13 +69,13 @@
     }
     @include media('<lg') {
         min-height: 400px;
-        // img {
-        //     display: none;
-        //     @include hidden;
-        // }
-        // .ps-banner__content {
-        //     padding: 0 30px;
-        // }
+        img {
+            display: none;
+            @include hidden;
+        }
+        .ps-banner__content {
+            padding: 0 30px;
+        }
     }
     @include media('<xs') {
         h3 {
