--- a/src/scss/elements/_details.scss
+++ b/src/scss/elements/_details.scss
@@ -912,7 +912,7 @@
 
     .ps-product__actions-mobile {
         position: fixed;
-        bottom: 80;
+        bottom: 80px;
         left: 0;
         width: 100%;
         z-index: 10003;
